# context-harness

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml  release.yml
agents/: adr-writer.lua  design-writer.lua  doc-coordinator.lua  prd-writer.lua  runbook-writer.lua  spec-writer.lua
config/: README.md  ctx.example.toml  ctx.toml
crates/context-harness/: Cargo.toml
crates/context-harness-app/: Cargo.toml  tauri.conf.json
crates/context-harness-app/capabilities/: default.json
crates/context-harness-app/frontend/: package-lock.json  package.json  vite.config.ts
crates/context-harness-app/frontend/src/: App.svelte  app.css
crates/context-harness-app/frontend/src/lib/components/: Sidebar.svelte  Toast.svelte
crates/context-harness-app/frontend/src/lib/stores/: app.ts
crates/context-harness-app/frontend/src/lib/views/: Agents.svelte  Connectors.svelte  Dashboard.svelte  Documents.svelte  Embeddings.svelte  Registry.svelte  Search.svelte  Settings.svelte  Welcome.svelte
crates/context-harness-app/icons/: icon.icns
crates/context-harness-app/src/: lib.rs  main.rs  state.rs
crates/context-harness-app/src/commands/: agent.rs  connector.rs  document.rs  embedding.rs  mod.rs  registry.rs  search.rs  server.rs  settings.rs  sync.rs  workspace.rs
crates/context-harness-core/: Cargo.toml
crates/context-harness-core/src/: chunk.rs  embedding.rs  lib.rs  models.rs  search.rs
crates/context-harness-core/src/store/: memory.rs  mod.rs
crates/context-harness/src/: agent_script.rs  app_store.rs  chunk.rs  config.rs  get.rs  (+25 more)
demo/: demo.sh
demo/config/: ctx.toml
demo/knowledge-base/: api-design-standards.md  architecture-decisions.md  data-platform.md  deployment-pipeline.md  incident-response.md  observability-stack.md  onboarding-guide.md  postmortem-2025-10-03.md  rust-best-practices.md  security-practices.md  team-topology.md
demo/ui/: index.html
docs/: AGENTS.md  DEPLOYMENT.md  DESIGN.md  FILE_SUPPORT.md  FILE_SUPPORT_IMPLEMENTATION_PLAN.md  HYBRID_SCORING.md  PHASE_1_ACCEPTANCE.md  REGISTRY.md  SCHEMAS.md  SPEC_POLICY.md  SYNC_PROGRESS.md  USAGE.md  WORKSPACE_REFACTOR_SPEC.md
docs/adr/: 0000-adr-policy.md  0001-rust-as-implementation-language.md  0002-sqlite-as-embedded-storage.md  0003-fts5-for-keyword-search.md  0004-brute-force-vector-search.md  0005-hybrid-scoring-with-min-max-normalization.md  0006-paragraph-boundary-chunking.md  0007-trait-based-extension-system.md  0008-lua-for-runtime-extensibility.md  0009-mcp-streamable-http-transport.md  0010-toml-configuration-with-env-expansion.md  0011-local-first-embedding-providers.md  0012-pure-rust-s3-client.md  0013-git-backed-extension-registries.md  0014-stateless-agent-architecture.md  0015-spec-driven-development.md  0016-nix-for-builds.md  0017-rustls-over-openssl.md  0018-store-abstraction-and-workspace-split.md  0019-agpl3-license.md  0020-cross-platform-framework-selection.md  0021-vector-index-acceleration.md  0021-xdg-base-directory-compliance.md  0021-zvec-as-embedded-storage.md  0022-direct-inference-provider-abstraction.md  0022-xdg-base-directory-compliance.md  0023-request-origin-binding.md  README.md
docs/design/: 0000-design-policy.md  0003-file-support-implementation-plan.md  0005-deployment-guide.md  0006-vector-index-acceleration.md  0006-xdg-config-directories.md  0006-zvec-storage-migration.md  0007-direct-inference-chat-implementation-plan.md  0007-xdg-config-directories.md  0008-graph-benchmark-protocol.md  0008-multi-workspace-mcp-router.md  0009-workspace-scoped-extensions.md  README.md
docs/prd/: 0000-prd-policy.md  0001-core-context-engine.md  0002-browser-search-widget.md  0003-extensibility-platform.md  0004-local-first-embeddings.md  0005-observability-and-polish.md  0006-workspace-refactor-and-library-publishing.md  0007-wasm-client-and-browser-rag.md  0008-tauri-desktop-application.md  0009-retrieval-quality-and-dogfooding.md  0010-distribution-and-packaging.md  0011-multi-workspace-mcp-router.md  0011-native-app.md  0012-direct-llm-inference-chat.md  README.md
docs/runbook/: 0000-runbook-policy.md  0001-local-dev-setup.md  0002-build-cli.md  0003-build-tauri-app.md  0004-run-tests.md  0005-cut-release.md  0006-ci-failures.md  0007-deploy-docker.md  0008-deploy-systemd.md  0009-deploy-mcp-cursor.md  0010-workspace-init.md  0011-sync-connectors.md  0012-manage-embeddings.md  0013-database-maintenance.md  0014-registry-init-update.md  0015-author-lua-extension.md  0016-deploy-docs-site.md  0017-common-errors.md  0018-chat-via-cli.md  0018-multi-workspace-mcp-routing.md  README.md
docs/spec/: 0000-spec-policy.md  0001-native-app.md  0002-workspace-refactor.md  0005-usage-contract.md  0006-json-schemas.md  0008-lua-connectors.md  0009-lua-tools.md  0010-rust-extension-traits.md  0012-config-resolution.md  0012-storage-and-vector-index-interfaces.md  0013-config-resolution.md  0013-direct-llm-inference-chat.md  0014-multi-workspace-mcp-router.md  README.md
examples/: custom_harness.rs
examples/connectors/: github-issues.lua
examples/tools/: create-jira-ticket.lua
scripts/: build-docs.sh  download-stats.sh  generate-release-blog.sh  generate-site-index.py
site/: config.toml  index.html  style.css
site/content/: _index.md
site/demo/: data.json  index.html
site/docs/: index.html
site/sass/: docs.scss  style.scss
site/static/: ctx-search.js  llms.txt  site-index.json
site/templates/: base.html  index.html
src/: agent_script.rs  agents.rs  chunk.rs  config.rs  connector_fs.rs  connector_git.rs  connector_s3.rs  connector_script.rs  db.rs  embed_cmd.rs  embedding.rs  extract.rs  get.rs  ingest.rs  lib.rs  main.rs  mcp.rs  migrate.rs  models.rs  registry.rs  search.rs  server.rs  sources.rs  stats.rs  tool_script.rs  traits.rs
src/embedding/: local_tract.rs  mod.rs
tests/: file_support.rs  integration.rs  traits_integration.rs
tests/fixtures/: test_connector.lua  test_tool.lua
(+74 files in other folders)
