[package]
name = "context-harness"
version = "0.2.0"
edition = "2021"
description = "A local-first context ingestion and retrieval framework for AI tools"
license = "MIT"
repository = "https://github.com/parallax-labs/context-harness"
readme = "README.md"
keywords = ["ai", "context", "search", "mcp", "embeddings"]
categories = ["command-line-utilities", "database"]

[lib]
name = "context_harness"
path = "src/lib.rs"

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
globset = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
base64 = "0.22"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.12"
hex = "0.4"
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }

