[package]
name = "context-harness-app"
version = "0.1.0"
edition = "2021"
description = "Native desktop app for Context Harness"
license = "AGPL-3.0-or-later"

[lib]
name = "context_harness_app"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
context-harness-core = { path = "../context-harness-core" }
context-harness = { path = "../context-harness" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
sha2 = "0.10.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
